--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,12 @@ header{
     z-index: 15;
     width: 100%;
 }
+header .col-2 img{
+    width: 170px;
+}
+header .col-1 img{
+    width: 45px;
+}
 
 /*partie text d'accueil*/
 .col-10{
