--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ color: green;
 footer{
     height: 200px;
     background-color: #DFDFDF;
+    color:#01A659;   
 }
 footer p{
     text-align: center;
